# bioinformatics-algorithms

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  python_dependencies.txt
Alignment/: alignment_visualization.py
Alignment/MultipleSequenceAlignment/: phylogenetic_tree.py
Alignment/MultipleSequenceAlignment/include/: neighbour_joining.h
Alignment/MultipleSequenceAlignment/src/: neighbour_joining.cpp
Alignment/MultipleSequenceAlignment/testNJ/: test_neighbour_joining.cpp
Alignment/NeedlemanWunsch/include/: needleman_wunsch.h
Alignment/NeedlemanWunsch/src/: needleman_wunsch.cpp
Alignment/NeedlemanWunsch/testWN/: test_needleman.cpp
Alignment/SmithWaterman/include/: smith_waterman.h
Alignment/SmithWaterman/src/: smith_waterman.cpp
Alignment/SmithWaterman/testSW/: test_smith.cpp
Assembly/De_Brujin_Graphs/: kmerfreq_check_python.py  visualize_graph.py  visualize_kmerFrequency.py
Assembly/De_Brujin_Graphs/include/: assembly.h  graph.h
Assembly/De_Brujin_Graphs/src/: assembly.cpp  graph.cpp
kmer_genetic_distance/data/: Escherichia_Coli_k2.csv  Klebsiella_Pneumoniae_k2.csv  distances_k2.csv  distances_k3.csv  distances_k4.csv  kmer_frequencies.csv  kmer_frequencies_k2.csv  kmer_frequencies_k3.csv  kmer_frequencies_k4.csv  kmer_frequencies_k5.csv  norm_kmer_freq_k2.csv  norm_kmer_freq_k3.csv  norm_kmer_freq_k4.csv
kmer_genetic_distance/scripts/: genetic_visualizer.py  kmer_counter.py
workflow_scripts/: graphVisualization.sh  kmerFreq.sh  phylogenetic_tree.sh  run_alignment_pipeline.sh  temp_output.txt
